--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav id="leftsidebar">
                 <ul>
                     <li><a href="#pams">Pams Section</a></li>
-                    <li><a href="#beads">Beads SECTION</a></li>
-                    <li><a href="#logo">Logo/Designs sections</a></li>
+                    <li><a href="#beads">Beads Section</a></li>
+                    <li><a href="#logo">Logo/Designs Section</a></li>
                     <li><a href="#frames">Picture Frames Section</a></li>
                 </ul>
             </nav>
