--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <body>
         <!--Header Section-->
         <header>
-            <h1><span style="color: red;">C</span>HINNY <span style="color: red;">C</span>LASSIC
-               <span style="color: red;">E</span>MPIRE</h1>
+            <h1><span style="color: red;">C</span>HINNY <span style="color: red;">C</span>LASSIC <span style="color: yellow;">EMPIRE</span></h1>
             <p id="watchword">Designing with passion, 
                 Delivering with excellence.</p>
         </header>
