--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <body>
         <!--Header Section-->
         <header>
-            <h1><span style="color: red;">C</span>HINNY <span style="color: red;">C</span>LASSIC <span style="color: yellow;">EMPIRE</span></h1>
-            <p id="watchword">Designing with passion, 
+            <h1>CHINNY CLASSIC <span style="color: rgb(158, 158, 4);">EMPIRE</span></h1>
+            <img src="/images/Chinny Classic Empire logo.png" alt="Chinny Classic Empire Logo" class="logo">
+            <p id="watchword">
+              Designing with passion, 
                 Delivering with excellence.</p>
         </header>
 
