--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--Header Section-->
         <header>
             <h1>CHINNY CLASSIC <span style="color: rgb(158, 158, 4);">EMPIRE</span></h1>
-            <img src="images/Chinny Classic Empire logo.png" alt="Chinny Classic Empire Logo" class="logo">
+            <img src="images/Chinny-Classic-Empire-logo.png" alt="Chinny Classic Empire Logo" class="logo">
             <p id="watchword">
               Designing with passion, 
                 Delivering with excellence.</p>
