--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <nav id="leftsidebar">
                 <ul>
                     <li><a href="#pams">Pams Section</a></li>
-                    <li><a href="#beads">Beads Section</a></li>
-                    <li><a href="#logo">Logo/Designs Section</a></li>
+                    <li><a href="#beads">Hand Fan and Brides Accessories</a></li>
                     <li><a href="#frames">Picture Frames Section</a></li>
                 </ul>
             </nav>
@@ -37,16 +36,13 @@
     <h3>Featured Work</h3>
     <div class="featured">
       <div class="project-card">
-        <h4>Elegant Custom Piece</h4>
-        <p>A carefully crafted item that blends tradition and creativity.</p>
+        <img src="images/bead-5.jpg" alt="Bride's Handfan">
       </div>
       <div class="project-card">
-        <h4>Bold Modern Design</h4>
-        <p>Showcasing precision and originality in every detail.</p>
+        <img src="images/Bride-1.jpg" alt="Bride's Necklace">
       </div>
       <div class="project-card">
-        <h4>Artisanal Finish</h4>
-        <p>Crafted with attention to style, texture, and meaning.</p>
+        <img src="images/pam-1.jpg" alt="Men's Pam">
       </div>
     </div>
 
@@ -72,7 +68,7 @@
             <nav id="rightsidebar">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="Aboutus.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -82,9 +78,13 @@
         <footer class="footer">
             <p>&copy; 2023 Chinny Classic Empire. All rights reserved.</p>
             <p>Follow us on:
-                <a href="#">Instagram</a>,
-                <a href="#">Facebook</a>,
-                <a href="#">Twitter</a>
+                <a href="https://www.instagram.com/princess_chinny_30?igsh=MWRtdWZtOXYyaTVleg==">Instagram</a>,
+                <a href="https://www.facebook.com/share/16WcbU1Mx7/?mibextid=wwXIfr">Facebook</a>,
+                <a href="https://www.tiktok.com/@ugoeze003?_r=1&_d=ek6ljegmefd630&sec_uid=MS4wLjABAAAA71pHo_
+                inbD9lu6WNUWTkJF-HeZH6MipqZnekv7AzlX3aHNSpA-i7s180WSL8Omrk&share_author_id=7499804310739256343&sharer_
+                language=en&source=h5_m&u_code=ek55hc44g44ac8&ug_btm=b8727,b0&social_share_type=4&utm_source=copy&sec_user
+                _id=MS4wLjABAAAA71pHo_inbD9lu6WNUWTkJF-HeZH6MipqZnekv7AzlX3aHNSpA-i7s180WSL8Omrk&tt_from=copy&utm_medium=ios&utm
+                _campaign=client_share&enable_checksum=1&user_id=7499804310739256343&share_link_id=30359810-440A-46EE-AA88-2F26E7F3E35C&share_app_id=1233">TikTok</a>
             </p>
         </footer>
 
