--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <img src="images/Bride-1.jpg" alt="Bride's Necklace">
       </div>
       <div class="project-card">
+        <img src="images/Bride-2.jpg" alt="Bride's Accessories">
+      </div>
+      <div class="project-card">
         <img src="images/pam-1.jpg" alt="Men's Pam">
       </div>
     </div>
