--- a/Aboutus.html
+++ b/Aboutus.html
@@ -24,6 +24,19 @@
     As we continue to grow, we remain grounded in our values: passion, precision, and a relentless pursuit of creativity.
     At <strong>Chinny Classic Empire</strong>, every detail matters — and every client becomes part of our creative story.
   </p>
+
+  <p>
+    We are open for bookings, collaborations, and custom orders.
+    Whether you’re looking for a unique piece for yourself or a special gift, we are here to help you find exactly what you need.
+    Explore our collections, or contact us to discuss your ideas.
+    Let’s create something beautiful together!
+    <div class="Address">
+    <br>  
+      Physical Location: Lagos, Nigeria
+    <br>
+    Delivery: Nationwide and International Shipping Available
+    </div>
+  </p>
 </section>
 <!-- ✅ Footer Section -->
 <footer class="footer">
