--- a/Aboutus.html
+++ b/Aboutus.html
@@ -31,10 +31,10 @@
     Explore our collections, or contact us to discuss your ideas.
     Let’s create something beautiful together!
     <div class="Address">
-    <br>  
-      Physical Location: Lagos, Nigeria
     <br>
-    Delivery: Nationwide and International Shipping Available
+      <span style="color: red;">Physical Location:</span> Lagos, Nigeria
+    <br>
+    <span style="color: red;">Delivery:</span> Nationwide and International Shipping Available
     </div>
   </p>
 </section>
