--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="Aboutus.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
