--- a/Aboutus.html
+++ b/Aboutus.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <section id="about" class="about-section">
-  <h2>About Us</h2>
+      <img src="images/Chinny-Classic-Empire-logo.png" alt="Chinny Classic Empire Logo" class="logo">
+      <h2>About Chinny Classic Empire</h2>
   <p>
     At <strong>Chinny Classic Empire</strong>, we believe that creativity is a gift, and every creation is an opportunity to tell a story.
     Founded with a deep passion for artistry and cultural expression, our brand has become a haven for unique, handcrafted pieces that blend tradition with contemporary design.
