--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
 <body>
     <section class="contact-section">
   <div class="contact-container">
+    <img src="images/Chinny-Classic-Empire-logo.png" 
+    alt="Chinny Classic Empire Logo" class="logo">
     <h2>Contact Us / Registration form</h2>
     <p>We’d love to hear from you! Fill out the form below or reach out through the provided contact details.</p>
 
